{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 52,
  "lineage": "01a6fa4b-ed4a-c2e9-00a5-44583794de88",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-29T12:12:49.934-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terra-practice/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
            "priority": 1000,
            "project": "terra-practice",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/firewalls/allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-29T12:12:49.807-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terra-practice/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
            "priority": 1000,
            "project": "terra-practice",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/firewalls/allow-https",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "mynetwork"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221206",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terra-practice/zones/us-central1-a/disks/app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terra-practice/zones/us-central1-a/instances/app",
            "instance_id": "8996258421430831659",
            "label_fingerprint": "PlqFQLBsw9g=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "app"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "MuAwUCgnRF8=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "app",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terra-practice/global/networks/default",
                "network_ip": "10.128.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terra-practice/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terra-practice"
              }
            ],
            "project": "terra-practice",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terra-practice/zones/us-central1-a/instances/app",
            "service_account": [
              {
                "email": "465032115582-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}